refactor database in the GROM model and make a consistent GO DB
